testsuite/tests/checks/abstract_types/test.out
abstract_types.ads:3:19: error: Abstract_Types - rule violation
3 |    type Figure is abstract tagged private;              --  FLAG
  |                   ^^^^^^^^^^^^^^^^^^^^^^^ 

abstract_types.ads:6:19: error: Abstract_Types - rule violation
6 |    type Figure is abstract tagged null record;          --  FLAG
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

